--- a/src/index.css
+++ b/src/index.css
@@ -5,6 +5,7 @@
 body {
   background: url(../src/Assets/background.png);
   background-attachment: fixed;
+  background-size: cover;
   height: 100vh;
   /* background: #161513; */
   color: white;
