--- a/src/index.css
+++ b/src/index.css
@@ -7,8 +7,6 @@ body {
   background-attachment: fixed;
   background-repeat: no-repeat;
   height: 100vh;
-  /* background: #161513; */
-  color: white;
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
     "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
@@ -20,4 +18,7 @@ body {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
+}
+.contenu-react {
+  -webkit-overflow-scrolling: touch;
 }
