--- a/src/index.css
+++ b/src/index.css
@@ -4,8 +4,8 @@
 }
 body {
   background: url(../src/Assets/background.png);
+  background-position: fixed;
   background-attachment: fixed;
-  background-repeat: no-repeat;
   height: 100vh;
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
@@ -18,7 +18,4 @@ body {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
-}
-.contenu-react {
-  -webkit-overflow-scrolling: touch;
 }
