--- a/src/index.css
+++ b/src/index.css
@@ -3,9 +3,9 @@
   padding: 0;
 }
 body {
-  background: url(../src/Assets/background.png);
+  /* background: url(../src/Assets/background.png);
   background-position: fixed;
-  background-attachment: fixed;
+  background-attachment: fixed; */
   height: 100vh;
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
