--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,5 @@
   text-align: center;
   background: url(../src/Assets/background.png);
   background-attachment: fixed;
-  background-position: fixed;
-  background-repeat: no-repeat;
+  height: 100vh;
 }
