--- a/src/index.css
+++ b/src/index.css
@@ -4,9 +4,8 @@
 }
 body {
   /* background: url(../src/Assets/background.png);
-  background-position: fixed;
-  background-attachment: fixed; */
-  height: 100vh;
+  background-attachment: fixed;
+  height: 100vh; */
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
     "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
