--- a/src/index.css
+++ b/src/index.css
@@ -1,11 +1,12 @@
 * {
   margin: 0;
   padding: 0;
+  text-align: center;
 }
 body {
-  /* background: url(../src/Assets/background.png);
+  background: url(../src/Assets/background.png);
   background-attachment: fixed;
-  height: 100vh; */
+  height: 100vh;
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
     "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
