--- a/src/App.css
+++ b/src/App.css
@@ -1,1 +1,35 @@
+* {
+  margin: 0;
+  padding: 0;
+}
 
+body,
+html {
+  height: 100%;
+  overflow-x: hidden;
+}
+
+.parallax {
+  position: relative;
+  height: 100vh;
+  overflow: hidden;
+}
+
+.parallax::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: url(../src/Assets/background.png) center center/cover no-repeat;
+  z-index: -1;
+}
+
+.content {
+  position: relative;
+  z-index: 1;
+  height: 100%;
+  overflow-y: auto;
+  -webkit-overflow-scrolling: touch; /* Pour un défilement fluide sur iOS */
+}
