--- a/src/index.css
+++ b/src/index.css
@@ -4,10 +4,10 @@
   text-align: center;
 }
 body {
-  background: url(../src/Assets/background.png);
+  /* background: url(../src/Assets/background.png);
   background-repeat: repeat;
   background-attachment: fixed;
-  height: 100vh;
+  height: 100vh; */
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
     "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
