--- a/src/Components/Accueil/Accueil.css
+++ b/src/Components/Accueil/Accueil.css
@@ -26,15 +26,47 @@
 
 .bas-gauche {
   width: 100%;
+  color: white;
   padding: 20px;
   margin: 10px;
   box-sizing: border-box;
+  display: flex;
+  flex-direction: column;
+  gap: 35px;
   order: 1; /* Ordre par défaut */
 }
-/* .logo-img {
-  max-width: 200%;
-  height: auto;
-} */
+.bas-gauche h1 {
+  text-align: center;
+  /* width: 100%; */
+  font-size: 90px;
+  font-weight: 700;
+}
+.bas-gauche h1 span {
+  color: #ba1f33; /* Couleur rose pour "LIVE" */
+}
+.bas-gauche p {
+  font-size: 24px;
+  line-height: 40px;
+}
+.about-achievement h2 {
+  /* padding: 0px 30px; */
+  font-size: 70px;
+  font-weight: 700;
+  color: #ba1f33;
+  text-align: center;
+}
+.about-achievement h5 {
+  font-size: 24px;
+  text-align: center;
+}
+.btn-contactez-nous {
+  font-weight: 600;
+  color: white;
+  background-color: #ba1f33;
+}
+.btn-contactez-nous:hover {
+  background-color: #b93c4c;
+}
 
 /* Styles pour les grands écrans */
 @media (min-width: 768px) {
@@ -54,14 +86,24 @@
     order: 1; /* Ordre par défaut */
   }
   .logo-img {
+    width: 100%;
+  }
+  .bas-gauche h1 {
+    margin-top: 75px;
+  }
+  .about-achievements {
     display: flex;
-    width: 100%; /* Taille de l'image sur les grands écrans */
+    width: 100%;
+    gap: 40px;
+    justify-content: space-around;
+    margin-bottom: 80px;
   }
 }
 
 /* Styles pour les écrans mobiles */
 @media (max-width: 767px) {
   .accueil-cadre {
+    display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: space-between;
@@ -73,7 +115,7 @@
   }
 
   .bas-gauche {
-    width: 100%;
+    width: 85%;
     order: 2; /* Inverse l'ordre */
   }
   .logo-img {
@@ -81,5 +123,15 @@
     display: flex;
     margin-top: -45px;
     width: 100%;
+  }
+  .bas-gauche h1 {
+    display: none;
+  }
+
+  .about-achievements h2 {
+    font-size: 40px;
+  }
+  .about-achievements h5 {
+    font-size: 15px;
   }
 }
