--- a/src/Components/Accueil/Accueil.css
+++ b/src/Components/Accueil/Accueil.css
@@ -49,7 +49,7 @@
   line-height: 40px;
 }
 .about-achievement h2 {
-  /* padding: 0px 30px; */
+  /* padding: -10px 30px; */
   font-size: 70px;
   font-weight: 700;
   color: #ba1f33;
@@ -68,7 +68,7 @@
   background-color: #b93c4c;
 }
 
-/* Styles pour les grands écrans */
+/************************ Styles pour les grands écrans */
 @media (min-width: 768px) {
   .accueil-cadre {
     flex-direction: row;
@@ -100,7 +100,7 @@
   }
 }
 
-/* Styles pour les écrans mobiles */
+/*************************** Styles pour les écrans mobiles */
 @media (max-width: 767px) {
   .accueil-cadre {
     display: flex;
@@ -110,19 +110,18 @@
   }
 
   .haut-droite {
-    margin-top: -10px;
+    margin-top: -20px;
     width: 100%;
     order: 1; /* Inverse l'ordre */
   }
 
   .bas-gauche {
+    margin-top: -50px;
     width: 85%;
     order: 2; /* Inverse l'ordre */
   }
   .logo-img {
-    /* margin-top: -50px; */
     display: flex;
-    margin-top: -45px;
     width: 100%;
   }
   .bas-gauche h1 {
@@ -131,8 +130,17 @@
 
   .about-achievements h2 {
     font-size: 40px;
+    margin-top: -20px;
   }
   .about-achievements h5 {
-    font-size: 15px;
+    font-size: 12px;
+  }
+  .btn-contactez-nous {
+    font-weight: 600;
+    color: white;
+    background-color: #ba1f33;
+  }
+  .btn-contactez-nous:hover {
+    background-color: #b93c4c;
   }
 }
