--- a/src/Components/Accueil/Accueil.css
+++ b/src/Components/Accueil/Accueil.css
@@ -108,7 +108,7 @@
   }
 
   .haut-droite {
-    margin-top: -45px;
+    margin-top: -35px;
     width: 100%;
     order: 1; /* Inverse l'ordre */
   }
@@ -126,22 +126,24 @@
     display: none;
   }
   .about-achievements {
-    margin-top: -15px;
+    margin-top: -5px;
   }
 
   .about-achievement h2 {
-    font-size: 35px;
+    font-size: 30px;
     margin-top: -10px;
   }
   .about-achievements h5 {
     font-size: 14px;
     font-weight: bold;
+    margin-bottom: -5px;
+    margin-top: -5px;
   }
   .social-icons i {
     font-size: 20px;
-    margin-top: -13px;
+    margin-top: -10px;
   }
   .btn-contactez-nous {
-    margin-top: -8px;
+    margin-top: -5px;
   }
 }
