cablage bouton accueil vers contact et smooth scroll

--- a/src/Components/Navbar/Navbar.css
+++ b/src/Components/Navbar/Navbar.css
@@ -7,7 +7,8 @@
   padding-right: 5px;
 }
 .nav-link i {
-  padding-right: 5px;
+  padding-right: 10px;
+  color: #ba1f33;
 }
 .offcanvas-title span {
   color: #ba1f33;
