--- a/src/index.css
+++ b/src/index.css
@@ -2,6 +2,7 @@
   margin: 0;
   padding: 0;
   text-align: center;
+  scroll-behavior: smooth;
 }
 body {
   /* background: url(../src/Assets/background.png);
