lifting page des prestas à venir

--- a/src/Components/Accueil/Accueil.css
+++ b/src/Components/Accueil/Accueil.css
@@ -64,6 +64,7 @@
   font-weight: 600;
   color: white;
   background-color: #ba1f33;
+  border: none;
 }
 
 /************************ Styles pour les grands écrans */
