--- a/src/Components/Connexion/Connexion.css
+++ b/src/Components/Connexion/Connexion.css
@@ -5,7 +5,8 @@
 }
 .contact-cadre {
   width: 90%;
-  background: blueviolet;
+  color: white;
+  background: #1f242d;
   border-radius: 10px;
   margin-top: 85px;
   margin-bottom: 15px;
