--- a/src/Components/About/About.css
+++ b/src/Components/About/About.css
@@ -5,7 +5,8 @@
 }
 .about-cadre {
   width: 90%;
-  background: green;
+  color: white;
+  background: #1f242d;
   border-radius: 10px;
   margin-top: 85px;
   margin-bottom: 15px;
