--- a/src/Components/CarteFuturEvent/CarteFuturEvent.css
+++ b/src/Components/CarteFuturEvent/CarteFuturEvent.css
@@ -45,24 +45,27 @@
 }
 /*************************** Styles pour les écrans mobiles */
 @media (max-width: 767px) {
+  .carte-avant {
+    gap: 2px;
+  }
   .carte-avant h3 {
-    font-size: 18px;
+    font-size: 13px;
     font-weight: 600;
   }
   .carte-avant h2 {
-    font-size: 15px;
+    font-size: 10px;
     font-weight: 800;
     color: #ba1f33;
   }
   .carte-avant p {
-    font-size: 14px;
+    font-size: 10px;
     line-height: 40px;
     max-width: 300px;
   }
   .card-readmore {
     display: flex;
-    gap: 10px;
+    gap: 2px;
     align-items: center;
-    margin-top: 20px;
+    margin-top: 2px;
   }
 }
