--- a/src/Components/PassedEvents/PassedEvents.css
+++ b/src/Components/PassedEvents/PassedEvents.css
@@ -4,10 +4,36 @@
   height: 100vh;
 }
 .anciens-cadre {
-  width: 90%;
+  width: 85%;
   color: white;
-  background: #1f242d;
+  /* background: #1f242d; */
   border-radius: 10px;
   margin-top: 85px;
   margin-bottom: 15px;
 }
+.mywork-title {
+  position: relative;
+  margin-bottom: 55px;
+}
+.mywork-container {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  gap: 40px;
+  margin-bottom: 80px;
+}
+@media (max-width: 767px) {
+  .anciens {
+    display: flex;
+    justify-content: center;
+    /* height: 100vh; */
+  }
+  .mywork-container {
+    grid-template-columns: 1fr;
+  }
+  .mywork-title h1 {
+    padding: 0px 0px;
+    font-size: 30px;
+    font-weight: 600;
+  }
+}
+/* ***************************** */
