--- a/src/Components/PassedEvents/PassedEvents.css
+++ b/src/Components/PassedEvents/PassedEvents.css
@@ -1,7 +1,7 @@
 .anciens {
   display: flex;
   justify-content: center;
-  height: 100vh;
+  /* height: 100vh; */
 }
 .anciens-cadre {
   width: 85%;
@@ -11,11 +11,11 @@
   margin-top: 85px;
   margin-bottom: 15px;
 }
-.mywork-title {
+.anciens-title {
   position: relative;
   margin-bottom: 55px;
 }
-.mywork-container {
+.anciens-container {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
   gap: 40px;
@@ -27,10 +27,10 @@
     justify-content: center;
     /* height: 100vh; */
   }
-  .mywork-container {
+  .anciens-container {
     grid-template-columns: 1fr;
   }
-  .mywork-title h1 {
+  .anciens-title h1 {
     padding: 0px 0px;
     font-size: 30px;
     font-weight: 600;
