--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,9 @@
-* {
+/* * {
   margin: 0;
   padding: 0;
   scroll-behavior: smooth;
 }
 body {
-  /* background: url(../src/Assets/background.png);
-  background-repeat: repeat;
-  background-attachment: fixed;
-  height: 100vh; */
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
     "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
@@ -19,4 +15,5 @@ body {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
-}
+} */
+/* ****************V2***************** */
