--- a/src/Components/Contact/Contact.css
+++ b/src/Components/Contact/Contact.css
@@ -23,11 +23,7 @@
   flex-direction: column;
   gap: 30px;
 }
-.contact-left h1 {
-  font-size: 80px;
-  font-weight: 700;
-  color: #ba1f33;
-}
+
 .contact-left p {
   max-width: 550px;
   color: #d8d8d8;
@@ -50,7 +46,7 @@
   display: flex;
   flex-direction: column;
   align-items: start;
-  gap: 30px;
+  gap: 10px;
 }
 .contact-right label {
   color: #d8d8d8;
@@ -96,7 +92,7 @@
 @media (max-width: 768px) {
   .contact {
     gap: 50px;
-    margin: 50px 70px;
+    margin: 50px 20px;
     align-items: start;
   }
   .contact-title h1 {
@@ -106,9 +102,7 @@
   .contact-section {
     flex-direction: column;
   }
-  .contact-left h1 {
-    font-size: 54px;
-  }
+
   .contact-left p {
     font-size: 18px;
   }
@@ -117,6 +111,9 @@
   }
   .contact-detail i {
     width: 25px;
+  }
+  .contact-right {
+    margin-top: -120px;
   }
   .contact-right label {
     font-size: 20px;
@@ -132,5 +129,7 @@
   .contact-submit {
     font-size: 20px;
     padding: 15px 40px;
+    margin-top: 5px;
+    margin-left: 15px;
   }
 }
