--- a/src/Components/PassedEvents/PassedEvents.css
+++ b/src/Components/PassedEvents/PassedEvents.css
@@ -24,9 +24,9 @@
 }
 .anciens-title h1 {
   padding: 0px 30px;
-  font-size: 2.4rem;
+  font-size: 80px;
   margin-bottom: 20px;
-  font-weight: 700;
+  font-weight: 600;
   text-align: center;
 }
 /******************** Styles pour les écrans mobiles */
@@ -39,9 +39,8 @@
     grid-template-columns: 1fr;
   }
   .anciens-title h1 {
-    font-size: 2.4rem;
+    font-size: 50px;
     margin-bottom: 20px;
-    font-weight: 700;
     text-align: center;
   }
 }
