--- a/src/Components/FutursEvents/FutursEvents.css
+++ b/src/Components/FutursEvents/FutursEvents.css
@@ -24,9 +24,9 @@
 }
 .a-venirs-title h1 {
   padding: 0px 30px;
-  font-size: 2.4rem;
+  font-size: 80px;
   margin-bottom: 20px;
-  font-weight: 700;
+  font-weight: 600;
   text-align: center;
 }
 /******************** Styles pour les écrans mobiles */
@@ -39,10 +39,8 @@
     grid-template-columns: 1fr;
   }
   .a-venirs-title h1 {
-    font-size: 2.4rem;
-    margin-bottom: 20px;
-    font-weight: 700;
-    text-align: center;
+    padding: 0;
+    font-size: 50px;
   }
 }
 /* ***************************** */
