--- a/src/Components/CartePassedEvent/CartePassedEvent.css
+++ b/src/Components/CartePassedEvent/CartePassedEvent.css
@@ -41,10 +41,11 @@
   margin-bottom: 8px;
 }
 .carte-Event-passed:hover {
-  border: 3px solid #ff45c3;
-  background-image: linear-gradient(45deg, #ba1f33, #1a1761);
+  /* border: 3px solid #ff45c3; */
+  background-image: linear-gradient(45deg, #ff45c3, #1a1761);
   transform: scale(1.05);
   transition: 0.4s;
+  border: 3px solid #ba1f33;
 }
 /*************************** Styles pour les écrans mobiles */
 @media (max-width: 767px) {
