--- a/src/Components/Medias/Medias.css
+++ b/src/Components/Medias/Medias.css
@@ -28,3 +28,9 @@
   border-radius: 10px;
   border: 3px solid white;
 }
+@media (max-width: 767px) {
+  .medias-title h1 {
+    padding: 0;
+    font-size: 50px;
+  }
+}
