--- a/src/Components/CartePassedEvent/CartePassedEvent.css
+++ b/src/Components/CartePassedEvent/CartePassedEvent.css
@@ -42,7 +42,7 @@
 }
 .carte-Event-passed:hover {
   /* border: 3px solid #ff45c3; */
-  background-image: linear-gradient(45deg, #ff45c3, #1a1761);
+  background-image: linear-gradient(45deg, #1a1761 0.36%, #ba1f33 102.06%);
   transform: scale(1.05);
   transition: 0.4s;
   border: 3px solid #ba1f33;
