--- a/src/Components/CarteFuturEvent/CarteFuturEvent.css
+++ b/src/Components/CarteFuturEvent/CarteFuturEvent.css
@@ -43,6 +43,9 @@
   transform: scale(1.05);
   transition: 0.4s;
 }
+.modal-backdrop {
+  z-index: -1;
+}
 /*************************** Styles pour les écrans mobiles */
 @media (max-width: 767px) {
   .carte-avant {
