remplacement par une vrai image à telecharger

--- a/src/Components/CarteFuturEvent/CarteFuturEvent.css
+++ b/src/Components/CarteFuturEvent/CarteFuturEvent.css
@@ -1,4 +1,6 @@
 .carte-avant {
+  text-decoration: none;
+  color: white;
   background-color: #1f242d;
   display: flex;
   flex-direction: column;
