--- a/src/Components/PassedEvents/PassedEvents.css
+++ b/src/Components/PassedEvents/PassedEvents.css
@@ -10,6 +10,17 @@
   margin-top: 85px;
   margin-bottom: 15px;
 }
+.carousel {
+  border-radius: 10px;
+  border: 3px solid white;
+  transition: 0.4s;
+}
+.carousel:hover {
+  border: 3px solid #ba1f33;
+  border-radius: 10px;
+  transform: scale(1.05);
+  transition: 0.4s;
+}
 .anciens-title {
   position: relative;
   margin-bottom: 55px;
