--- a/src/Components/Accueil/Accueil.css
+++ b/src/Components/Accueil/Accueil.css
@@ -70,10 +70,14 @@
   padding: 20px 20px;
   margin-top: 20px;
   margin-bottom: 15px;
-
   cursor: pointer;
   transition: 0.3s;
 }
+.btn-contactez-nous:hover {
+  transform: scale(1.1);
+  transition: 0.3s;
+}
+
 .social-icons i {
   font-size: 30px;
 }
