--- a/src/Components/CarteFuturEvent/CarteFuturEvent.css
+++ b/src/Components/CarteFuturEvent/CarteFuturEvent.css
@@ -10,7 +10,7 @@
   border-radius: 10px;
   border: 3px solid white;
   transition: 0.4s;
-  cursor: pointer;
+  /* cursor: pointer; */
 }
 .carte-avant h3 {
   font-size: 28px;
@@ -67,6 +67,7 @@
   background: #ba1f33;
   color: white;
 }
+
 /*************************** Styles pour les écrans mobiles */
 @media (max-width: 767px) {
   .carte-avant {
@@ -87,7 +88,7 @@
     max-width: 300px;
   }
   .card-readmore {
-    margin-top: -5px;
+    margin-top: 0px;
     margin-bottom: -20px;
   }
 }
