--- a/src/Components/CartePassedEvent/CartePassedEvent.css
+++ b/src/Components/CartePassedEvent/CartePassedEvent.css
@@ -8,7 +8,10 @@
   /* border-radius: 10px;
   border: 3px solid white;
   transition: 0.4s; */
-  cursor: pointer;
+  /* cursor: pointer; */
+}
+.carte-Event-passed:hover {
+  background-image: linear-gradient(45deg, #ba1f33 0.36%, #1a1761 102.06%);
 }
 .carte-Event-passed img {
   border: 3px solid white;
