--- a/src/Components/Contact/Contact.css
+++ b/src/Components/Contact/Contact.css
@@ -112,6 +112,23 @@
   margin-top: -10px;
   margin-bottom: 10px;
 }
+.overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.35); /* Noir avec 50% d'opacité */
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 1000; /* Assurez-vous que l'overlay est au-dessus des autres éléments */
+}
+
+.spinner-border {
+  width: 60px;
+  height: 60px;
+}
 /*************Ecrans max 768px*************/
 @media (max-width: 768px) {
   .contact {
